# Tien_viettel_ai_race

./: .gitignore  OPTIMIZATION_GUIDE.md  README.md  config.json  main.py  pyproject.toml
databases/: medical_dictionary.json
databases/icd10_vn/: icd10_database.json
databases/rxnorm/: rxnorm_database.json
prompts/: synthetic_data_prompt.md
scripts/: 01_download_datasets.py  02_build_icd10_database.py  03_build_rxnorm_database.py  04_scrape_medical_data.py  05_generate_synthetic_data.py  06_medical_dictionary.py  07_convert_to_unified_format.py  08_build_all.py  09_test_faiss_index.py  10_check_icd.py  11_test_pipeline.py  12_test_pipeline_full.py  15_verify_assertions.py  16_find_positions.py  17_add_missing_drugs.py  18_import_icd10_xml.py  19_rebuild_full_databases.py  prepare_databases.py
src/: __init__.py  inference.py  optimized_inference.py  pipeline.py
src/assertion/: __init__.py  section_aware.py
src/entity_linking/: __init__.py  build_index.py
src/eval/: evaluator.py
src/ner/: __init__.py  position_align.py  span_merger.py
src/normalization/: __init__.py
src/postprocessing/: __init__.py  validator.py
src/preprocessing/: rule_extractor.py  section_detector.py
