[project]
name = "viettel-medical-nlp"
version = "0.1.0"
description = "Medical NLP for Vietnamese clinical text - Modular Pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "datasets>=5.0.0",
    "huggingface-hub>=1.24.0",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "lxml>=5.0.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "faiss-cpu>=1.7.0",
    "rapidfuzz>=3.0.0",
]
